src/tess/tl/test/fail/test_fail_const_value_compound_assign.tl
#module main

main() {
    x: Const[Int] := 5
    x += 1
    0
}
